welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
while (!estFaceMurdroite())
	{droite()
	while (!estSurBiscuit)
		{avance()}
	prendBiscuit()
	droite()
	droite()
	while (!estSurBiscuit)
		{avance()}
	recule()
	poseBiscuit()}
droite()
avance()
gauche()
avance()